Fixed font color contrast on small screens

--- a/webapp/bits/main.scss
+++ b/webapp/bits/main.scss
@@ -169,7 +169,7 @@ img {
         background-color: $clr-background-light;
       }
       li>a {
-        color: $clr-font-dark;
+        color: $clr-font-dark !important;
         font-size: $fs-appbar;
       }
     }
